--- a/DRL.ipynb
+++ b/DRL.ipynb
@@ -340,7 +340,22 @@
       "Episode [2600/10000]\tAverage Shortfall: $701,206.83\n",
       "Episode [2700/10000]\tAverage Shortfall: $663,251.46\n",
       "Episode [2800/10000]\tAverage Shortfall: $657,303.85\n",
-      "Episode [2900/10000]\tAverage Shortfall: $659,449.09\n"
+      "Episode [2900/10000]\tAverage Shortfall: $659,449.09\n",
+      "Episode [3000/10000]\tAverage Shortfall: $666,066.00\n",
+      "Episode [3100/10000]\tAverage Shortfall: $641,556.34\n",
+      "Episode [3200/10000]\tAverage Shortfall: $646,264.04\n",
+      "Episode [3300/10000]\tAverage Shortfall: $697,360.02\n",
+      "Episode [3400/10000]\tAverage Shortfall: $729,598.04\n",
+      "Episode [3500/10000]\tAverage Shortfall: $628,381.38\n",
+      "Episode [3600/10000]\tAverage Shortfall: $653,519.65\n",
+      "Episode [3700/10000]\tAverage Shortfall: $633,117.92\n",
+      "Episode [3800/10000]\tAverage Shortfall: $598,151.92\n",
+      "Episode [3900/10000]\tAverage Shortfall: $610,779.89\n",
+      "Episode [4000/10000]\tAverage Shortfall: $1,681,782.74\n",
+      "Episode [4100/10000]\tAverage Shortfall: $727,528.55\n",
+      "Episode [4200/10000]\tAverage Shortfall: $684,810.78\n",
+      "Episode [4300/10000]\tAverage Shortfall: $646,928.94\n",
+      "Episode [4400/10000]\tAverage Shortfall: $679,275.21\n"
      ]
     }
    ],
