--- a/yf/pic.ipynb
+++ b/yf/pic.ipynb
@@ -2,51 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-02T14:21:57.275760Z",
-     "start_time": "2020-01-02T14:21:57.260757Z"
+     "end_time": "2020-01-02T14:32:05.986154Z",
+     "start_time": "2020-01-02T14:32:05.980254Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Error' is not defined",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 23)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mError\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-ced4a572f8c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m                 \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaindir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/code/.virtualenvs/ai/lib/python3.6/shutil.py\u001b[0m in \u001b[0;36mmove\u001b[0;34m(src, dst, copy_function)\u001b[0m\n\u001b[1;32m    541\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_dst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 542\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Destination path '%s' already exists\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mreal_dst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    543\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mError\u001b[0m: Destination path '/Users/yefeng/yf/night/pics2/0B070D504580C121EA132BF018B1E4D1.gif' already exists",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-ced4a572f8c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaindir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m             \u001b[0;32mexcept\u001b[0m \u001b[0mError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Error' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    except Exception as e:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import shutil\n",
-    "# old_dir=\"/Users/yefeng/yf/night/pic/\"\n",
-    "# old_dir=\"/Users/yefeng/Downloads/gif\"\n",
-    "# new_dir=\"/Users/yefeng/yf/night/pics/\"\n",
-    "\n",
-    "old_dir=\"/Users/yefeng/Downloads/123/\"\n",
-    "new_dir=\"/Users/yefeng/yf/night/pics2/\"\n",
-    "# shutil.copytree(old_dir,new_dir+\"backup/\")\n",
+    "old_dir=\"/Users/yefeng/yf/night/pic/\"\n",
+    "pic_dir=\"/Users/yefeng/yf/night/daily/pic/\"\n",
+    "mp4_dir=\"/Users/yefeng/yf/night/daily/mp4/\"\n",
     "for maindir, subdir, file_name_list in os.walk(old_dir):\n",
     "    for file in file_name_list:\n",
     "        if(maindir.startswith(\".\")):\n",
     "            continue\n",
     "        if(\"/.\" in maindir):\n",
     "            continue\n",
-    "        if(file.lower().endswith(\".jpg\")or file.lower().endswith(\".jpeg\") or file.lower().endswith(\".gif\")):\n",
+    "        if(file.lower().endswith(\".jpg\")\\\n",
+    "           or file.lower().endswith(\".jpeg\")\\\n",
+    "           or file.lower().endswith(\".gif\")\\\n",
+    "           or file.lower().endswith(\".png\")):\n",
     "            try:\n",
-    "                shutil.move(maindir+\"/\"+file, new_dir)\n",
-    "            except Error as e:\n",
+    "                shutil.move(maindir+\"/\"+file, pic_dir)\n",
+    "            except Exception as e:\n",
+    "                print(e)\n",
+    "        if(file.lower().endswith(\".mp4\")):\n",
+    "             try:\n",
+    "                shutil.move(maindir+\"/\"+file, mp4_dir)\n",
+    "                except Exception as e:\n",
     "                print(e)\n",
     "                "
    ]
